--- a/config/windows/config.tcp.yaml
+++ b/config/windows/config.tcp.yaml
@@ -174,6 +174,10 @@ brain_sberta_personality:
     files:
       #reg-ex
       regex_templates: $BOT_ROOT/config/regex-templates.txt
+      maps: 
+        files: $BOT_ROOT/maps
+        extension: .txt
+        directories: false
 
     # Overrides
     overrides:
