--- a/config/windows/config.yaml
+++ b/config/windows/config.yaml
@@ -4,7 +4,7 @@ console:
 
   scheduler:
     name: Scheduler1
-    debug_level: 100
+    debug_level: 50
     add_listeners: False
     remove_all_jobs: False
 
@@ -56,72 +56,72 @@ console:
                   subdirs: false
                   extension: .aiml
                 errors_storage:
-                  file: $BOT_ROOT\storage/debug/errors.txt
+                  file: $BOT_ROOT\debug/errors.txt
                 duplicates_storage:
-                  file: $BOT_ROOT\storage/debug/duplicates.txt
+                  file: $BOT_ROOT\debug/duplicates.txt
                 learnf_storage:
-                  dirs: $BOT_ROOT\storage/categories/learnf
+                  dirs: $BOT_ROOT\categories/learnf
 
                 conversation_storage:
-                  dirs: $BOT_ROOT\storage/conversations
+                  dirs: $BOT_ROOT\conversations
 
                 sets_storage:
-                  dirs: $BOT_ROOT\storage/sets
+                  dirs: $BOT_ROOT\sets
                   extension: txt
                 maps_storage:
                   dirs: $BOT_ROOT/maps
                   extension: txt
                 rdf_storage:
-                  dirs: $BOT_ROOT\storage/rdfs
+                  dirs: $BOT_ROOT\rdfs
                   subdirs: true
                   extension: txt
 
                 denormal_storage:
-                  file: $BOT_ROOT\storage/lookups/denormal.txt
+                  file: $BOT_ROOT\lookups/denormal.txt
                 normal_storage:
-                  file: $BOT_ROOT\storage/lookups/normal.txt
+                  file: $BOT_ROOT\lookups/normal.txt
                 gender_storage:
-                  file: $BOT_ROOT\storage/lookups/gender.txt
+                  file: $BOT_ROOT\lookups/gender.txt
                 person_storage:
-                  file: $BOT_ROOT\storage/lookups/person.txt
+                  file: $BOT_ROOT\lookups/person.txt
                 person2_storage:
-                  file: $BOT_ROOT\storage/lookups/person2.txt
+                  file: $BOT_ROOT\lookups/person2.txt
                 regex_storage:
-                  file: $BOT_ROOT\storage/lookups/regex.txt
+                  file: $BOT_ROOT\lookups/regex.txt
 
                 properties_storage:
-                  file: $BOT_ROOT\storage/properties/properties.txt
+                  file: $BOT_ROOT\properties/properties.txt
                 defaults_storage:
-                  file: $BOT_ROOT\storage/properties/defaults.txt
+                  file: $BOT_ROOT\properties/defaults.txt
                 variables_storage:
-                  dirs: $BOT_ROOT\storage/variables
+                  dirs: $BOT_ROOT\variables
 
                 twitter_storage:
-                  dirs: $BOT_ROOT\storage/twitter
+                  dirs: $BOT_ROOT\twitter
 
                 spelling_storage:
-                  file: $BOT_ROOT\storage/spelling/corpus.txt
+                  file: $BOT_ROOT\spelling/corpus.txt
 
                 license_storage:
-                  file: $BOT_ROOT\storage/licenses/license.keys
+                  file: $BOT_ROOT\licenses/license.keys
 
                 pattern_nodes_storage:
-                  file: $BOT_ROOT\storage/nodes/pattern_nodes.conf
+                  file: $BOT_ROOT\nodes/pattern_nodes.conf
                 template_nodes_storage:
-                  file: $BOT_ROOT\storage/nodes/template_nodes.conf
+                  file: $BOT_ROOT\nodes/template_nodes.conf
 
                 binaries_storage:
-                  file: $BOT_ROOT\storage/braintree/braintree.bin
+                  file: $BOT_ROOT\braintree/braintree.bin
                 braintree_storage:
-                  file: $BOT_ROOT\storage/braintree/braintree.xml
+                  file: $BOT_ROOT\braintree/braintree.xml
 
                 preprocessors_storage:
-                  file: $BOT_ROOT\storage/processing/preprocessors.conf
+                  file: $BOT_ROOT\processing/preprocessors.conf
                 postprocessors_storage:
-                  file: $BOT_ROOT\storage/processing/postprocessors.conf
+                  file: $BOT_ROOT\processing/postprocessors.conf
 
                 usergroups_storage:
-                  file: $BOT_ROOT\storage/security/usergroups.yaml
+                  file: $BOT_ROOT\security/usergroups.yaml
 
           logger:
               type:   logger
@@ -216,7 +216,7 @@ brain:
 
     # Braintree
     braintree:
-      create: true
+      create: false
 
     services:
         REST:
