--- a/config/xnix/config.yaml
+++ b/config/xnix/config.yaml
@@ -1,5 +1,4 @@
 console:
-  description: Program-Y Template Console Client
   bot:  bot
   prompt: ">>>"
 
@@ -53,76 +52,76 @@ console:
               type:   file
               config:
                 categories_storage:
-                  dirs: ../../storage/categories
+                  dirs: $BOT_ROOT/categories
                   subdirs: false
                   extension: .aiml
                 errors_storage:
-                  file: ../../storage/debug/errors.txt
+                  file: $BOT_ROOT/debug/errors.txt
                 duplicates_storage:
-                  file: ../../storage/debug/duplicates.txt
+                  file: $BOT_ROOT/debug/duplicates.txt
                 learnf_storage:
-                  dirs: ../../storage/categories/learnf
+                  dirs: $BOT_ROOT/categories/learnf
 
                 conversation_storage:
-                  dirs: ../../storage/conversations
+                  dirs: $BOT_ROOT/conversations
 
                 sets_storage:
-                  dirs: ../../storage/sets
+                  dirs: $BOT_ROOT/sets
                   extension: txt
                 maps_storage:
-                  dirs: ../../storage/maps
+                  dirs: $BOT_ROOT/maps
                   extension: txt
                 rdf_storage:
-                  dirs: ../../storage/rdfs
+                  dirs: $BOT_ROOT/rdfs
                   subdirs: true
                   extension: txt
 
                 denormal_storage:
-                  file: ../../storage/lookups/denormal.txt
+                  file: $BOT_ROOT/lookups/denormal.txt
                 normal_storage:
-                  file: ../../storage/lookups/normal.txt
+                  file: $BOT_ROOT/lookups/normal.txt
                 gender_storage:
-                  file: ../../storage/lookups/gender.txt
+                  file: $BOT_ROOT/lookups/gender.txt
                 person_storage:
-                  file: ../../storage/lookups/person.txt
+                  file: $BOT_ROOT/lookups/person.txt
                 person2_storage:
-                  file: ../../storage/lookups/person2.txt
+                  file: $BOT_ROOT/lookups/person2.txt
                 regex_storage:
-                  file: ../../storage/regex/regex-templates.txt
+                  file: $BOT_ROOT/lookups/regex.txt
 
                 properties_storage:
-                  file: ../../storage/properties/properties.txt
+                  file: $BOT_ROOT/properties/properties.txt
                 defaults_storage:
-                  file: ../../storage/properties/defaults.txt
+                  file: $BOT_ROOT/properties/defaults.txt
                 variables_storage:
-                  dirs: ../../storage/variables
+                  dirs: $BOT_ROOT/variables
 
                 twitter_storage:
-                  dirs: ../../storage/twitter
+                  dirs: $BOT_ROOT/twitter
 
                 spelling_storage:
-                  file: ../../storage/spelling/corpus.txt
+                  file: $BOT_ROOT/spelling/corpus.txt
 
                 license_storage:
-                  file: ../../storage/licenses/license.keys
+                  file: $BOT_ROOT/licenses/license.keys
 
                 pattern_nodes_storage:
-                  file: ../../storage/nodes/pattern_nodes.conf
+                  file: $BOT_ROOT/nodes/pattern_nodes.conf
                 template_nodes_storage:
-                  file: ../../storage/nodes/template_nodes.conf
+                  file: $BOT_ROOT/nodes/template_nodes.conf
 
                 binaries_storage:
-                  file: ../../storage/braintree/braintree.bin
+                  file: $BOT_ROOT/braintree/braintree.bin
                 braintree_storage:
-                  file: ../../storage/braintree/braintree.xml
+                  file: $BOT_ROOT/braintree/braintree.xml
 
                 preprocessors_storage:
-                  file: ../../storage/processing/preprocessors.conf
+                  file: $BOT_ROOT/processing/preprocessors.conf
                 postprocessors_storage:
-                  file: ../../storage/processing/postprocessors.conf
+                  file: $BOT_ROOT/processing/postprocessors.conf
 
                 usergroups_storage:
-                  file: ../../storage/security/usergroups.yaml
+                  file: $BOT_ROOT/security/usergroups.yaml
 
           logger:
               type:   logger
@@ -135,14 +134,15 @@ console:
 
 bot:
     brain: brain
+    root: $BOT_ROOT
 
-    initial_question: Hi, how can I help you today?
-    initial_question_srai: YINITIALQUESTION
-    default_response: Sorry, I don't have an answer for that!
-    default_response_srai: YEMPTY
-    empty_string: YEMPTY
-    exit_response: So long, and thanks for the fish!
-    exit_response_srai: YEXITRESPONSE
+    #initial_question: Приветствую, чем я могу Вам помочь?
+    #initial_question_srai: YINITIALQUESTION
+    #default_response: Я не совсем Вас понимаю
+    #default_response_srai: YEMPTY
+    #empty_string: YEMPTY
+    #exit_response: До свидания!
+    #exit_response_srai: YEXITRESPONSE
 
     override_properties: true
 
@@ -151,22 +151,46 @@ bot:
     max_search_depth: 100
     max_search_timeout: 60
 
-    spelling:
-      load: true
-      classname: programy.spelling.norvig.NorvigSpellingChecker
-      corpus: file
-      check_before: false
-      check_and_retry: false
+    #we don't need spelling checker right now because of its existence in speech-to-text module
+    #spelling:
+    #  load: true
+    #  classname: programy.spelling.norvig.NorvigSpellingChecker
+    #  corpus: file
+    #  check_before: false
+    #  check_and_retry: false
 
     conversations:
-      save: true
+      save: false
       load: false
+      type: file
+      config_name: file_storage
+      empty_on_start: true
+
+    file_storage:
+      dir: $BOT_ROOT/conversations
 
 
 #####################################################################################################
 #
 
 brain:
+    # Files
+    files:
+      #reg-ex
+      regex_templates: $BOT_ROOT/regexp/template.txt
+      maps:
+        files: $BOT_ROOT/maps
+        extension: .txt
+        directories: false
+      properties:
+        files: $BOT_ROOT/properties
+        extension: .txt
+      rdf:
+        files: $BOT_ROOT/rdfs
+        extension: .txt
+        directories: false
+      triples: $BOT_ROOT/rdfs/triples.txt
+
 
     # Overrides
     overrides:
@@ -192,7 +216,7 @@ brain:
 
     # Braintree
     braintree:
-      create: False
+      create: false
 
     services:
         REST:
@@ -256,4 +280,3 @@ brain:
         maps:
             romantodec: programy.dynamic.maps.roman.MapRomanToDecimal
             dectoroman: programy.dynamic.maps.roman.MapDecimalToRoman
-
