--- a/tariff_comparer/requirements.txt
+++ b/tariff_comparer/requirements.txt
@@ -1,11 +1,71 @@
+aiohttp==3.5.4
+APScheduler==3.6.1
+async-timeout==3.0.1
+attrs==19.3.0
+autocorrect==0.3.0
+beautifulsoup4==4.8.0
+botbuilder-core==4.5.0b4
+botbuilder-schema==4.5.0b4
+botframework-connector==4.5.0b4
 certifi==2019.9.11
+cffi==1.13.0
 chardet==3.0.4
+Click==7.0
+cryptography==2.8
+discord.py==1.2.3
+emoji==0.5.3
+Flask==1.1.1
+Flask-SocketIO==4.2.1
+future==0.18.1
 idna==2.8
+isodate==0.6.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+kik==1.5.0
+line-bot-sdk==1.14.0
+lxml==4.4.1
+MarkupSafe==1.1.1
+MetOffer==1.3.2
+msrest==0.6.10
+multidict==4.5.2
+nltk==3.4.5
 numpy==1.17.2
+oauthlib==3.1.0
 pandas==0.25.1
+programy==3.9.1
+pycparser==2.19
+PyJWT==1.7.1
+pymessenger==0.0.7.0
+pymongo==3.9.0
+PyMySQL==0.9.3
+PySocks==1.7.1
 pyTelegramBotAPI==3.6.6
 python-dateutil==2.8.0
+python-engineio==3.9.3
+python-socketio==4.3.1
+python-telegram-bot==12.0.0
 pytz==2019.3
+PyYAML==5.1.2
+redis==3.3.8
 requests==2.22.0
+requests-oauthlib==1.2.0
+requests-toolbelt==0.9.1
 six==1.12.0
+slackclient==1.3.1
+sleekxmpp==1.3.3
+soupsieve==1.9.4
+SQLAlchemy==1.3.8
+textblob==0.15.3
+tornado==6.0.3
+tweepy==3.8.0
+twilio==6.30.0
+tzlocal==2.0.0
 urllib3==1.25.6
+viberbot==1.0.11
+websocket-client==0.54.0
+websockets==6.0
+Werkzeug==0.16.0
+wget==3.2
+wikipedia==1.4.0
+xlrd==1.2.0
+yarl==1.3.0
