--- a/tariff_comparer/requirements.txt
+++ b/tariff_comparer/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==3.0.1
 attrs==19.3.0
 autocorrect==0.3.0
 beautifulsoup4==4.8.0
+bokeh==1.3.4
 botbuilder-core==4.5.0b4
 botbuilder-schema==4.5.0b4
 botframework-connector==4.5.0b4
@@ -13,11 +14,13 @@ chardet==3.0.4
 Click==7.0
 cryptography==2.8
 discord.py==1.2.3
+django-wkhtmltopdf==3.2.0
 emoji==0.5.3
 Flask==1.1.1
 Flask-SocketIO==4.2.1
 future==0.18.1
 idna==2.8
+imgkit==1.0.2
 isodate==0.6.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
@@ -31,13 +34,16 @@ multidict==4.5.2
 nltk==3.4.5
 numpy==1.17.2
 oauthlib==3.1.0
+packaging==19.2
 pandas==0.25.1
+Pillow==6.2.1
 programy==3.9.1
 pycparser==2.19
 PyJWT==1.7.1
 pymessenger==0.0.7.0
 pymongo==3.9.0
 PyMySQL==0.9.3
+pyparsing==2.4.2
 PySocks==1.7.1
 pyTelegramBotAPI==3.6.6
 python-dateutil==2.8.0
@@ -67,5 +73,6 @@ websockets==6.0
 Werkzeug==0.16.0
 wget==3.2
 wikipedia==1.4.0
+wkhtmltopdf==0.2
 xlrd==1.2.0
 yarl==1.3.0
